Cleanup code & API
- remove unused non-public methods
- minor split of large method
- misc